<resources>
    <string name="app_name">Vinoteca</string>
    <!-- Strings empleados en las interfaces activity_main y agregar_activity -->
    <string name="bt_Agregar">Agregar</string>

    <!-- Strings empleados en las interfaces activity_main y editar_activity -->
    <string name="bt_Editar">Editar</string>

    <!-- Strings empleados en las interfaces agregar_activity y editar_activity -->
    <string name="bt_Cancelar">Cancelar</string>

    <!-- Strings pertenecientes a la interfaz activity_main -->
    <string name="eT_Id_btEditar_Main_hint">Id:</string>
    <string name="scrollView_Descripcion">ScrolllView que contiene los distintos vinos que se almacenan en la base de datos</string>

    <!-- Strings pertenecientes a la interfaz agregar_activity -->
    <string name="eT_hint"></string>
    <string name="tV_Id">Id</string>
    <string name="tV_Nombre">Nombre</string>
    <string name="tV_Bodega">Bodega</string>
    <string name="tV_Color">Color</string>
    <string name="tV_Origen">Origen</string>
    <string name="tV_Graduacion">Graduación</string>
    <string name="tV_Fecha">Fecha</string>

    <!-- Strings pertenecientes a la interfaz editar_activity -->
    <string name="bt_Eliminar">Eliminar</string>

    <string name="nombreArchivo_csv">vinosAlfonso.csv</string>
</resources>