<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/lMarginDefault"
        android:layout_marginTop="@dimen/lMarginDefault"
        android:layout_marginEnd="@dimen/lMarginDefault"
        android:layout_marginBottom="@dimen/lMarginDefault"
        android:contentDescription="@string/scrollView_Descripcion"
        app:layout_constraintBottom_toTopOf="@+id/bt_Add_Main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Button
        android:id="@+id/bt_Add_Main"
        style="@style/bt_Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/bt_lMarginStartEnd"
        android:layout_marginBottom="@dimen/bt_lMarginBottom"
        android:text="@string/bt_Agregar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_Edit_Main"
        style="@style/bt_Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/bt_lMarginStartEnd"
        android:layout_marginBottom="@dimen/bt_lMarginBottom"
        android:text="@string/bt_Editar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>