<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tV_Id_Agregar"
                    style="@style/tv_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/tv_lMStartDeafult"
                    android:layout_marginTop="@dimen/tv_lMTop_Id"
                    android:text="@string/tV_Id"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/eT_Id_Agregar"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginEnd="@dimen/lMarginEndDefault"
                    android:layout_marginBottom="@dimen/eT_lMBottomDefault"
                    android:ems="10"
                    android:hint="@string/eT_hint"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:minHeight="@dimen/minHeight_Fix"
                    app:layout_constraintBottom_toBottomOf="@+id/tV_Id_Agregar"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/tV_Nombre_Agregar"
                    style="@style/tv_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/tv_lMStartDeafult"
                    android:layout_marginTop="@dimen/tv_lMTop_Deafult"
                    android:text="@string/tV_Nombre"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tV_Id_Agregar" />

                <EditText
                    android:id="@+id/eT_Nombre_Agregar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/lMarginEndDefault"
                    android:layout_marginBottom="@dimen/eT_lMBottomDefault"
                    android:ems="10"
                    android:hint="@string/eT_hint"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="@dimen/minHeight_Fix"
                    app:layout_constraintBottom_toBottomOf="@+id/tV_Nombre_Agregar"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/tV_Bodega_Agregar"
                    style="@style/tv_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/tv_lMStartDeafult"
                    android:layout_marginTop="@dimen/tv_lMTop_Deafult"
                    android:text="@string/tV_Bodega"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tV_Nombre_Agregar" />

                <EditText
                    android:id="@+id/eT_Bodega_Agregar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/lMarginEndDefault"
                    android:layout_marginBottom="@dimen/eT_lMBottomDefault"
                    android:ems="10"
                    android:hint="@string/eT_hint"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="@dimen/minHeight_Fix"
                    app:layout_constraintBottom_toBottomOf="@+id/tV_Bodega_Agregar"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/tV_Color_Agregar"
                    style="@style/tv_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/tv_lMStartDeafult"
                    android:layout_marginTop="@dimen/tv_lMTop_Deafult"
                    android:text="@string/tV_Color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tV_Bodega_Agregar" />

                <EditText
                    android:id="@+id/eT_Color_Agregar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/lMarginEndDefault"
                    android:layout_marginBottom="@dimen/eT_lMBottomDefault"
                    android:ems="10"
                    android:hint="@string/eT_hint"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="@dimen/minHeight_Fix"
                    app:layout_constraintBottom_toBottomOf="@+id/tV_Color_Agregar"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/tV_Origen_Agregar"
                    style="@style/tv_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/tv_lMStartDeafult"
                    android:layout_marginTop="@dimen/tv_lMTop_Deafult"
                    android:text="@string/tV_Origen"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tV_Color_Agregar" />

                <EditText
                    android:id="@+id/eT_Origen_Agregar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/lMarginEndDefault"
                    android:layout_marginBottom="@dimen/eT_lMBottomDefault"
                    android:ems="10"
                    android:hint="@string/eT_hint"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="@dimen/minHeight_Fix"
                    app:layout_constraintBottom_toBottomOf="@+id/tV_Origen_Agregar"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/tV_Graduacion_Agregar"
                    style="@style/tv_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/tv_lMStartDeafult"
                    android:layout_marginTop="@dimen/tv_lMTop_Deafult"
                    android:text="@string/tV_Graduacion"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tV_Origen_Agregar" />

                <EditText
                    android:id="@+id/eT_Graduacion_Agregar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/lMarginEndDefault"
                    android:layout_marginBottom="@dimen/eT_lMBottomDefault"
                    android:ems="10"
                    android:hint="@string/eT_hint"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:minHeight="@dimen/minHeight_Fix"
                    app:layout_constraintBottom_toBottomOf="@+id/tV_Graduacion_Agregar"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/tV_Fecha_Agregar"
                    style="@style/tv_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/tv_lMStartDeafult"
                    android:layout_marginTop="@dimen/tv_lMTop_Deafult"
                    android:text="@string/tV_Fecha"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tV_Graduacion_Agregar" />

                <EditText
                    android:id="@+id/eT_Fecha_Agregar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/lMarginEndDefault"
                    android:layout_marginBottom="@dimen/eT_lMBottomDefault"
                    android:ems="10"
                    android:hint="@string/eT_hint"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    android:minHeight="@dimen/minHeight_Fix"
                    app:layout_constraintBottom_toBottomOf="@+id/tV_Fecha_Agregar"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="SpeakableTextPresentCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/bt_Agregar_Agregar"
        style="@style/bt_Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/bt_lMarginStartEnd"
        android:layout_marginBottom="@dimen/bt_lMarginBottom"
        android:text="@string/bt_Agregar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/bt_Cancelar_Agregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/bt_lMarginStartEnd"
        android:layout_marginBottom="@dimen/bt_lMarginBottom"
        android:text="@string/bt_Cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>