<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tV_Id_Editar"
                    style="@style/tv_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/tv_lMStartDeafult"
                    android:layout_marginTop="@dimen/tv_lMTop_Id"
                    android:text="@string/tV_Id"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/eT_Id_Editar"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginEnd="@dimen/lMarginEndDefault"
                    android:layout_marginBottom="@dimen/eT_lMBottomDefault"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:hint="@string/eT_hint"
                    android:inputType="number"
                    android:minHeight="@dimen/minHeight_Fix"
                    app:layout_constraintBottom_toBottomOf="@+id/tV_Id_Editar"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/tV_Nombre_Editar"
                    style="@style/tv_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/tv_lMStartDeafult"
                    android:layout_marginTop="@dimen/tv_lMTop_Deafult"
                    android:text="@string/tV_Nombre"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tV_Id_Editar" />

                <EditText
                    android:id="@+id/eT_Nombre_Editar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/lMarginEndDefault"
                    android:layout_marginBottom="@dimen/eT_lMBottomDefault"
                    android:ems="10"
                    android:hint="@string/eT_hint"
                    android:inputType="text"
                    android:minHeight="@dimen/minHeight_Fix"
                    app:layout_constraintBottom_toBottomOf="@+id/tV_Nombre_Editar"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:importantForAutofill="no" />

                <TextView
                    android:id="@+id/tV_Bodega_Editar"
                    style="@style/tv_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/tv_lMStartDeafult"
                    android:layout_marginTop="@dimen/tv_lMTop_Deafult"
                    android:text="@string/tV_Bodega"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tV_Nombre_Editar" />

                <EditText
                    android:id="@+id/eT_Bodega_Editar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/lMarginEndDefault"
                    android:layout_marginBottom="@dimen/eT_lMBottomDefault"
                    android:ems="10"
                    android:hint="@string/eT_hint"
                    android:inputType="text"
                    android:minHeight="@dimen/minHeight_Fix"
                    app:layout_constraintBottom_toBottomOf="@+id/tV_Bodega_Editar"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:importantForAutofill="no" />

                <TextView
                    android:id="@+id/tV_Color_Editar"
                    style="@style/tv_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/tv_lMStartDeafult"
                    android:layout_marginTop="@dimen/tv_lMTop_Deafult"
                    android:text="@string/tV_Color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tV_Bodega_Editar" />

                <EditText
                    android:id="@+id/eT_Color_Editar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/lMarginEndDefault"
                    android:layout_marginBottom="@dimen/eT_lMBottomDefault"
                    android:ems="10"
                    android:hint="@string/eT_hint"
                    android:inputType="text"
                    android:minHeight="@dimen/minHeight_Fix"
                    app:layout_constraintBottom_toBottomOf="@+id/tV_Color_Editar"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:importantForAutofill="no" />

                <TextView
                    android:id="@+id/tV_Origen_Editar"
                    style="@style/tv_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/tv_lMStartDeafult"
                    android:layout_marginTop="@dimen/tv_lMTop_Deafult"
                    android:text="@string/tV_Origen"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tV_Color_Editar" />

                <EditText
                    android:id="@+id/eT_Origen_Editar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/lMarginEndDefault"
                    android:layout_marginBottom="@dimen/eT_lMBottomDefault"
                    android:ems="10"
                    android:hint="@string/eT_hint"
                    android:inputType="text"
                    android:minHeight="@dimen/minHeight_Fix"
                    app:layout_constraintBottom_toBottomOf="@+id/tV_Origen_Editar"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:importantForAutofill="no" />

                <TextView
                    android:id="@+id/tV_Graduacion_Editar"
                    style="@style/tv_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/tv_lMStartDeafult"
                    android:layout_marginTop="@dimen/tv_lMTop_Deafult"
                    android:text="@string/tV_Graduacion"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tV_Origen_Editar" />

                <EditText
                    android:id="@+id/eT_Graduacion_Editar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/lMarginEndDefault"
                    android:layout_marginBottom="@dimen/eT_lMBottomDefault"
                    android:ems="10"
                    android:hint="@string/eT_hint"
                    android:inputType="numberDecimal"
                    android:minHeight="@dimen/minHeight_Fix"
                    app:layout_constraintBottom_toBottomOf="@+id/tV_Graduacion_Editar"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:importantForAutofill="no" />

                <TextView
                    android:id="@+id/tV_Fecha_Editar"
                    style="@style/tv_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/tv_lMStartDeafult"
                    android:layout_marginTop="@dimen/tv_lMTop_Deafult"
                    android:text="@string/tV_Fecha"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tV_Graduacion_Editar" />

                <EditText
                    android:id="@+id/eT_Fecha_Editar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/lMarginEndDefault"
                    android:layout_marginBottom="@dimen/eT_lMBottomDefault"
                    android:ems="10"
                    android:hint="@string/eT_hint"
                    android:inputType="date"
                    android:minHeight="@dimen/minHeight_Fix"
                    app:layout_constraintBottom_toBottomOf="@+id/tV_Fecha_Editar"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:importantForAutofill="no" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/bt_Eliminar_Editar"
                    style="@style/bt_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/bt_lMarginStartEnd"
                    android:layout_marginTop="@dimen/bt_lMarginTop"
                    android:layout_marginBottom="@dimen/bt_lMarginBottom"
                    android:text="@string/bt_Eliminar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/bt_Editar_Editar"
                    style="@style/bt_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/bt_lMarginTop"
                    android:layout_marginEnd="@dimen/bt_lMarginStartEnd"
                    android:layout_marginBottom="@dimen/bt_lMarginBottom"
                    android:text="@string/bt_Editar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/bt_Cancelar_Editar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/lMarginSmallDefault"
                    android:layout_marginTop="@dimen/bt_lMarginTop"
                    android:layout_marginEnd="@dimen/lMarginSmallDefault"
                    android:layout_marginBottom="@dimen/bt_lMarginBottom"
                    android:text="@string/bt_Cancelar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/bt_Editar_Editar"
                    app:layout_constraintStart_toEndOf="@+id/bt_Eliminar_Editar"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>